tests/errors/division-by-zero.ja
procedure main()
    int x
    x += 5 / 0
